# TMA-Installer

./: README.md  index.html  package.json  pnpm-lock.yaml  style.css  vite.config.ts
.github/: LICENSE
src/: App.vue  fetch.ts  store.ts  strings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Install.vue  Login.vue  Update.vue
